remove console log + remove link underline+ fix frontpage overflow

--- a/Server/Client/src/Components/Button/Button.scss
+++ b/Server/Client/src/Components/Button/Button.scss
@@ -6,6 +6,8 @@
   font-size: 14px;
   font-family: $descriptionFont;
 
+
+
   &:focus{
     outline: none
   }
@@ -58,4 +60,8 @@
     transition: all 0.3s ease;
   }
   
+}
+
+a{
+  text-decoration: none;
 }
